BACKLOG-22637: Fix error when trying to install JS module from admin when Jahia is running on Windows